--- a/src/author.post.html
+++ b/src/author.post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Louise Jensen - Fyrre Magazine</title>
+    <title>Fyrre Magazine</title>
     <link rel="stylesheet" href="/src/author.post.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -12,9 +12,9 @@
         <div class="header-content">
             <p class="header">FYRRE MAGAZINE</p>
             <div class="header-links">
-                <a href="magazine.html">Magazine</a>
-                <a href="authors.html">Authors</a>
-                <a href="podcasts.html">Podcast</a>
+                <a href="/magazine">Magazine</a>
+                <a href="/authors">Authors</a>
+                <a href="/podcasts">Podcast</a>
                 <p>—</p>
                 <div class="nav-icons">
                     <a href="/" class="circle-icon"><i class="fab fa-instagram"></i></a>
@@ -28,7 +28,7 @@
         <hr>
 
         <div class="author-post-header">
-            <a href="/src/authors.html" class="a-link">← GO BACK</a>
+            <a href="/authors" class="a-link">← GO BACK</a>
             <h1 class="main-title">AUTHOR</h1>
         </div>
 
@@ -131,9 +131,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/src/magazine.html">Magazine</a></li>
-                    <li><a href="/src/podcasts.html">Podcast</a></li>
-                    <li><a href="/src/authors.html">Authors</a></li>
+                    <li><a href="/magazine">Magazine</a></li>
+                    <li><a href="/podcasts">Podcast</a></li>
+                    <li><a href="/authors">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
