--- a/src/magazine.post.html
+++ b/src/magazine.post.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="magazine.post.css">
+    <title>Article - Fyrre Magazine</title>
+    <link rel="stylesheet" href="/src/magazine.post.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <section class="container">
         <div class="header-content">
             <p class="header">FYRRE MAGAZINE</p>
-
             <div class="header-links">
-                <a href="magazine.html">Magazine</a>
-                <a href="authors.html">Authors</a>
-                <a href="podcasts.html">Podcast</a>
-
-                <p>--</p>
-
+                <a href="/magazine">Magazine</a>
+                <a href="/authors">Authors</a>
+                <a href="/podcasts">Podcast</a>
+                <p>—</p>
                 <div class="nav-icons">
                     <a href="/" class="circle-icon"><i class="fab fa-instagram"></i></a>
                     <a href="/" class="circle-icon"><i class="fab fa-twitter"></i></a>
@@ -29,6 +26,11 @@
         </div>
 
         <hr>
+
+        <div class="magazine-post-header">
+            <a href="/magazine" class="a-link">← GO BACK</a>
+            <h1 class="main-title">ARTICLE</h1>
+        </div>
 
         <div class="breadcrumb">
             <a href="/magazine.html">← SCIENCE</a>
@@ -171,9 +173,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/src/magazine.html">Magazine</a></li>
-                    <li><a href="/src/podcasts.html">Podcast</a></li>
-                    <li><a href="/src/authors.html">Authors</a></li>
+                    <li><a href="/magazine">Magazine</a></li>
+                    <li><a href="/podcasts">Podcast</a></li>
+                    <li><a href="/authors">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -196,5 +198,4 @@
         </div>
     </footer>
 </body>
-</html>
 </html>
