--- a/src/podcasts.html
+++ b/src/podcasts.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="podcasts.css">
+    <title>Fyrre Magazine</title>
+    <link rel="stylesheet" href="/src/podcasts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
             <p class="header">FYRRE MAGAZINE</p>
 
             <div class="header-links">
-                <a href="magazine.html">Magazine</a>
-                <a href="authors.html">Authors</a>
-                <a href="podcasts.html">Podcast</a>
+                <a href="/magazine">Magazine</a>
+                <a href="/authors">Authors</a>
+                <a href="/podcasts">Podcast</a>
 
                 <p>---</p>
 
@@ -191,9 +191,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/src/magazine.html">Magazine</a></li>
-                    <li><a href="/src/podcasts.html">Podcast</a></li>
-                    <li><a href="/src/authors.html">Authors</a></li>
+                    <li><a href="/magazine">Magazine</a></li>
+                    <li><a href="/podcasts">Podcast</a></li>
+                    <li><a href="/authors">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
