--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/src/magazine.html">Magazine</a></li>
-                    <li><a href="/src/podcasts.html">Podcast</a></li>
-                    <li><a href="/src/authors.html">Authors</a></li>
+                    <li><a href="/magazine">Magazine</a></li>
+                    <li><a href="/podcasts">Podcast</a></li>
+                    <li><a href="/authors">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
