--- a/src/author.post.html
+++ b/src/author.post.html
@@ -28,19 +28,19 @@
         <hr>
 
         <div class="author-post-header">
-            <a href="/authors" class="a-link">← GO BACK</a>
+            <a href="/src/authors.html" class="a-link">← GO BACK</a>
             <h1 class="main-title">AUTHOR</h1>
         </div>
 
         <div class="author-profile">
             <div class="author-info">
                 <div class="author-image">
-                    <img src="/src/images/author-images/louise.png" alt="Louise Jensen">
+                    <img src="/src/images/author-images/jakob.png" alt="Louise Jensen">
                 </div>
                 <div class="author-details">
-                    <h1>LOUISE<br>JENSEN</h1>
+                    <h1>Jakob<br>Grønberg</h1>
                     <div class="author-social">
-                        <p>FOLLOW</p>
+                        <a href="#" class="a-link">FOLLOW</a>
                         <div class="social-icons">
                             <a href="/"><i class="fab fa-instagram"></i></a>
                             <a href="/"><i class="fab fa-twitter"></i></a>
@@ -131,9 +131,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/magazine">Magazine</a></li>
-                    <li><a href="/podcasts">Podcast</a></li>
-                    <li><a href="/authors">Authors</a></li>
+                    <li><a href="/src/magazine.html">Magazine</a></li>
+                    <li><a href="/src/podcasts.html">Podcast</a></li>
+                    <li><a href="/src/authors.html">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
