--- a/src/magazine.post.html
+++ b/src/magazine.post.html
@@ -12,15 +12,15 @@
         <div class="header-content">
             <p class="header">FYRRE MAGAZINE</p>
             <div class="header-links">
-                <a href="/magazine">Magazine</a>
-                <a href="/authors">Authors</a>
-                <a href="/podcasts">Podcast</a>
+                <a href="/src/magazine.html">Magazine</a>
+                <a href="/src/authors.html">Authors</a>
+                <a href="/src/podcasts.html">Podcast</a>
                 <p>—</p>
                 <div class="nav-icons">
-                    <a href="/" class="circle-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="/" class="circle-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="/" class="circle-icon"><i class="fab fa-youtube"></i></a>
-                    <a href="/" class="circle-icon"><i class="fas fa-rss"></i></a>
+                    <a href="#" class="circle-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="circle-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="circle-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="circle-icon"><i class="fas fa-rss"></i></a>
                 </div>
             </div>
         </div>
@@ -28,12 +28,12 @@
         <hr>
 
         <div class="magazine-post-header">
-            <a href="/magazine" class="a-link">← GO BACK</a>
+            <a href="/src/magazine.html" class="a-link">← GO BACK</a>
             <h1 class="main-title">ARTICLE</h1>
         </div>
 
         <div class="breadcrumb">
-            <a href="/magazine.html">← SCIENCE</a>
+            <a href="/src/magazine.html">← SCIENCE</a>
             <p>MAGAZINE</p>
         </div>
 
@@ -61,9 +61,9 @@
                     <h3>Jakob Gronberg</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                     <div class="author-social">
-                        <a href="/"><i class="fab fa-twitter"></i></a>
-                        <a href="/"><i class="fab fa-instagram"></i></a>
-                        <a href="/"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
 
         <div class="section-header">
             <h2>LATEST POSTS</h2>
-            <a href="/" class="next-link">NEXT →</a>
+            <a href="/src/magazine.post.html" class="next-link">NEXT →</a>
         </div>
 
         <div class="posts-grid">
@@ -173,9 +173,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/magazine">Magazine</a></li>
-                    <li><a href="/podcasts">Podcast</a></li>
-                    <li><a href="/authors">Authors</a></li>
+                    <li><a href="/src/magazine.html">Magazine</a></li>
+                    <li><a href="/src/podcasts.html">Podcast</a></li>
+                    <li><a href="/src/authors.html">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
