--- a/src/podcasts.html
+++ b/src/podcasts.html
@@ -11,20 +11,20 @@
     <section class="container">
 
         <div class="header-content">
-            <p class="header">FYRRE MAGAZINE</p>
+            <a href="/" class="header">FYRRE MAGAZINE</a>
 
             <div class="header-links">
-                <a href="/magazine">Magazine</a>
-                <a href="/authors">Authors</a>
-                <a href="/podcasts">Podcast</a>
+                <a href="/src/magazine.html">Magazine</a>
+                <a href="/src/authors.html">Authors</a>
+                <a href="/src/podcasts.html">Podcast</a>
 
                 <p>---</p>
 
                 <div class="nav-icons">
-                    <a href="/" class="circle-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="/" class="circle-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="/" class="circle-icon"><i class="fab fa-youtube"></i></a>
-                    <a href="/" class="circle-icon"><i class="fas fa-rss"></i></a>
+                    <a href="#" class="circle-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="circle-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="circle-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="circle-icon"><i class="fas fa-rss"></i></a>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                             <strong>Duration:</strong> 1hr 20min
                         </p>
 
-                        <a href="/" class="a-link">LISTEN →</a>
+                        <a href="#" class="a-link">LISTEN →</a>
                     </div>
 
                 </div>
@@ -81,7 +81,7 @@
                             <strong>Duration:</strong> 1hr 20min
                         </p>
 
-                        <a href="/" class="a-link">LISTEN →</a>
+                        <a href="#" class="a-link">LISTEN →</a>
                     </div>
 
                 </div>
@@ -105,7 +105,7 @@
                             <strong>Duration:</strong> 1hr 20min
                         </p>
 
-                        <a href="/" class="a-link">LISTEN →</a>
+                        <a href="#" class="a-link">LISTEN →</a>
                     </div>
 
                 </div>
@@ -129,7 +129,7 @@
                             <strong>Duration:</strong> 1hr 20min
                         </p>
 
-                        <a href="/" class="a-link">LISTEN →</a>
+                        <a href="#" class="a-link">LISTEN →</a>
                     </div>
 
                 </div>
@@ -153,7 +153,7 @@
                             <strong>Duration:</strong> 1hr 20min
                         </p>
 
-                        <a href="/" class="a-link">LISTEN →</a>
+                        <a href="#" class="a-link">LISTEN →</a>
                     </div>
 
                 </div>
@@ -191,9 +191,9 @@
             </div>
             <div class="footer-column">
                 <ul>
-                    <li><a href="/magazine">Magazine</a></li>
-                    <li><a href="/podcasts">Podcast</a></li>
-                    <li><a href="/authors">Authors</a></li>
+                    <li><a href="/src/magazine.html">Magazine</a></li>
+                    <li><a href="/src/podcasts.html">Podcast</a></li>
+                    <li><a href="/src/authors.html">Authors</a></li>
                 </ul>
             </div>
             <div class="footer-column">
