--- a/src/magazine.html
+++ b/src/magazine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fyrre Magazine</title>
-    <link rel="stylesheet" href="/src/magazine.css">
+    <link rel="stylesheet" href="/css/magazine.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
