--- a/src/author.post.html
+++ b/src/author.post.html
@@ -12,9 +12,9 @@
         <div class="header-content">
             <p class="header">FYRRE MAGAZINE</p>
             <div class="header-links">
-                <a href="/magazine">Magazine</a>
-                <a href="/authors">Authors</a>
-                <a href="/podcasts">Podcast</a>
+                <a href="/src/magazine.html">Magazine</a>
+                <a href="/src/authors.html">Authors</a>
+                <a href="/src/podcasts.html">Podcast</a>
                 <p>—</p>
                 <div class="nav-icons">
                     <a href="/" class="circle-icon"><i class="fab fa-instagram"></i></a>
